# umf-on-cylinder

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cylinder_detector/: CMakeLists.txt  detector.cpp  detector.h  edgels.cpp  edgels.h  edges.cpp  edges.h  ellipse_clustering.cpp  ellipse_clustering.h  ellipse_ransac.cpp  ellipse_ransac.h  ellipses_clustering.cpp  ellipses_clustering.h  ellipses_fitting.cpp  ellipses_fitting.h  ellipses_ransac.cpp  ellipses_ransac.h  find_grid.cpp  find_grid.h  fitting.cpp  fitting.h  fitting_line.cpp  fitting_line.h  geometry_fundamentals.cpp  geometry_fundamentals.h  lines_clustering.cpp  lines_clustering.h  lines_fitting.cpp  lines_fitting.h  main.cpp  main2.cpp  main_ransac_test.cpp  parabola_fitting.cpp  parabola_fitting.h  parabola_fitting_test.cpp  parabolas_clustering.cpp  parabolas_clustering.h  parabolas_fitting.cpp  parabolas_fitting.h  parabolas_ransac.cpp  (+9 more)
doc/: dp-sp-part.odt  dp-text.odt
original_umf/: CMakeLists.txt  area.cpp  area.h  cross_ratio.cpp  cross_ratio.h  defines.h  detect_directions.cpp  detect_directions.h  detect_umf.cpp  detect_umf.h  detector_global.h  epnp.cpp  epnp.h  find_vanish.cpp  find_vanish.h  fit_hyperplane.cpp  fit_hyperplane.h  pixel_counter.h  structures.cpp  structures.h
